--- a/Styles.css
+++ b/Styles.css
@@ -1,3 +1,25 @@
+body,ul,li,h1,h2, a{
+    margin: 0;
+    padding: 0;
+    font-family: Arial;
+}
+
+header{
+    background-color:rgb(223, 15, 15);
+    color: #efebeb;
+    padding: 20px;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    top: 0%;
+}
+header h1{
+    color: white;
+    border: 8px solid white;
+    display: inline-block;
+    border-radius: 35px ;
+}
 .banner{
     position: relative;
 }
@@ -6,13 +28,98 @@
 }
 .banner .Welcome{
 
-    color: rgb(251, 3, 3);
+    color: rgb(244, 3, 3);
+    padding: 30px;
     position: absolute;
     left: 0;
-    top: 30px;
-  
-    
+    top: 15%;
 }
 .banner h2{
     font-size: 72px;
+    top: 10px;
+}
+.banner h2 span{
+    font-size: 1.3em;
+}
+.banner p{
+    font-size: 1.3em;
+    overflow-wrap:break-word;
+    display: inline-block;
+    
+}
+nav{
+    background-color: #f4f4ff;
+    padding: 20px;
+    position: sticky;
+    top: 9%;
+    width: 100%;
+}
+nav ul{
+    white-space: nowrap;
+    max-width: 1200px;
+    margin: auto;
+}
+nav li {
+  width:25%;
+  display: inline-block;
+  font-size: 20px;
+
+}
+nav li a{
+    text-decoration: none;
+    color: #4b4b4b;
+}
+nav ul li a .join.nav{
+     color: #f63232;
+}
+main{
+    max-width: 100%;
+    width: 100%;
+    margin: 80px auto;
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+article h2{
+    color:#f63232;
+    font-size: 48px;
+}
+article  p{
+    line-height: 2em;
+    font-size: medium;
+    color: #4b4b4b;
+}
+main ul .Images{
+    text-align: center;
+    margin: 80px 0;
+    white-space: nowrap;
+}
+.Images li{
+    display: inline-block;
+    width: 40%;
+    margin: 20px 5%;
+}
+.Images li img{
+    width: 100%;
+}
+ section.join{
+    background-color: #f4f4ff;
+    text-align: center;
+    padding: 60px 20px;
+    color: #4b4b4b;
+}
+.join h2{
+    font-size: 36px;
+}
+form input{
+    margin: 20px 0;
+    padding: 10px 20px;
+    font-size: 24px;
+    border-radius: 28px;
+    border: 4px solid white;
+}
+footer{
+    background-color: #f63232;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
 }
