--- a/Styles.css
+++ b/Styles.css
@@ -34,11 +34,11 @@ header h1{
     left: 0;
     top: 15%;
 }
-.banner h2{
-    font-size: 72px;
+.banner h1{
+    font-size: 50px;
     top: 10px;
 }
-.banner h2 span{
+.banner h1 span{
     font-size: 1.3em;
 }
 .banner p{
@@ -51,7 +51,7 @@ nav{
     background-color: #f4f4ff;
     padding: 20px;
     position: sticky;
-    top: 9%;
+    top: 90px;
     width: 100%;
 }
 nav ul{
@@ -67,7 +67,10 @@ nav li {
 }
 nav li a{
     text-decoration: none;
-    color: #4b4b4b;
+    color: #f63232;
+   
+    padding: 10px;
+    border-radius: 10px;
 }
 nav ul li a .join.nav{
      color: #f63232;
@@ -115,11 +118,117 @@ form input{
     padding: 10px 20px;
     font-size: 24px;
     border-radius: 28px;
-    border: 4px solid white;
+    border:  solid rgb(28, 27, 27);
 }
 footer{
     background-color: #f63232;
     margin: 0;
     padding: 10px;
     text-align: center;
+}
+nav li a:hover{
+    background-color: #f94040;
+    color: white;
+}
+p::selection{
+    background-color: #f94040;
+    color: white;
+}
+form input:valid{
+    border: 1px solid rgb(36, 189, 36);
+    outline: none;
+}
+form input:invalid:hover{
+    border: 2px solid rgb(239, 49, 16);
+    outline: none;
+}
+
+
+/* Tablet viewpoint*/
+
+@media screen and (max-width: 1438px) {
+    .banner .Welcome h1{
+        font-size: 40px;
+    }
+    .banner .Welcome h1 p{
+        font-size: 20px;
+    }
+    
+}
+@media screen and (max-width: 375px) {
+    header{
+        background-color:rgb(223, 15, 15);
+        color: #efebeb;
+        padding: 5px;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        z-index: 1;
+        top: 0%;
+    }
+    header h1{
+        color: white;
+        font-size: 10px;
+        border: 4px solid white;
+        display: inline-block;
+        border-radius: 35px ;
+    }
+
+    .banner .Welcome h1{
+        font-size: 12px;
+    
+    }
+    .banner h1 span{
+    font-size: 1.3em;
+     }
+    .banner .Welcome p{
+        margin-top: 0px;
+        width:60%;
+        font-size: 8.5px;
+    }
+    
+   nav{
+    position:relative;
+    top:10%;
+    }
+  
+    nav li {
+      width:25%;
+      display: block;
+      font-size: 15px;
+        top:20%;
+
+}
+.Images li{
+    display:block;
+    width: 100%;
+    margin: 20px 5%;
+}
+
+    article h2{
+    color:#f63232;
+    font-size: 30px;
+}
+article h3{
+   font-size: medium;
+}
+
+article  p{
+    line-height: 1.5em;
+    font-size: small;
+    color: #4b4b4b;
+}
+.join h2{
+    font-size: 25px;
+}
+.join p{
+    font-size: small;
+}
+form input{
+    margin: 15px 0;
+    padding: 10px 20px;
+    font-size: 20px;
+    border-radius: 25px;
+    border:  solid rgb(28, 27, 27);
+}
 }
