--- a/Styles.css
+++ b/Styles.css
@@ -35,17 +35,15 @@ header h1{
     top: 15%;
 }
 .banner h1{
-    font-size: 50px;
+    font-size: 60px;
     top: 10px;
 }
 .banner h1 span{
     font-size: 1.3em;
 }
-.banner p{
-    font-size: 1.3em;
-    overflow-wrap:break-word;
-    display: inline-block;
-    
+.banner .Welcome p{
+    font-size: 40px;
+    width: 60%; 
 }
 nav{
     background-color: #f4f4ff;
@@ -53,7 +51,7 @@ nav{
     position: sticky;
     top: 90px;
     width: 100%;
-}
+}  
 nav ul{
     white-space: nowrap;
     max-width: 1200px;
@@ -68,7 +66,6 @@ nav li {
 nav li a{
     text-decoration: none;
     color: #f63232;
-   
     padding: 10px;
     border-radius: 10px;
 }
@@ -145,17 +142,21 @@ form input:invalid:hover{
 
 
 /* Tablet viewpoint*/
+@media screen and (max-width:1000px) {
+    header{
+        background-color:rgb(223, 15, 15);
+        color: #efebeb;
+        padding: 10px;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        z-index: 1;
+        top: 0%;
+    }
 
-@media screen and (max-width: 1438px) {
-    .banner .Welcome h1{
-        font-size: 40px;
-    }
-    .banner .Welcome h1 p{
-        font-size: 20px;
-    }
-    
 }
-@media screen and (max-width: 375px) {
+
+@media screen and (max-width: 550px) {
     header{
         background-color:rgb(223, 15, 15);
         color: #efebeb;
@@ -174,17 +175,26 @@ form input:invalid:hover{
         border-radius: 35px ;
     }
 
-    .banner .Welcome h1{
-        font-size: 12px;
-    
+    .banner .Welcome{
+        background-color: rgb(250, 209, 63);
+        color: rgb(223, 15, 15);
+        padding: 30px;
+        position: relative;
+        left: 0;
+        top: 20%;
     }
+    .banner .Welcome h1{
+        width:60%;
+        font-size: 20px;
+    }
+    
     .banner h1 span{
-    font-size: 1.3em;
+    font-size: 1em;
      }
     .banner .Welcome p{
         margin-top: 0px;
-        width:60%;
-        font-size: 8.5px;
+        width:100%;
+        font-size: 12px;
     }
     
    nav{
@@ -196,8 +206,13 @@ form input:invalid:hover{
       width:25%;
       display: block;
       font-size: 15px;
-        top:20%;
+      top:20%;
 
+}
+nav li a{
+    color: #f63232;
+    padding: 1px;
+    border-radius: 5px;
 }
 .Images li{
     display:block;
