--- a/Styles.css
+++ b/Styles.css
@@ -42,7 +42,7 @@ header h1{
     font-size: 1.3em;
 }
 .banner .Welcome p{
-    font-size: 40px;
+    font-size: 35px;
     width: 60%; 
 }
 nav{
@@ -142,25 +142,150 @@ form input:invalid:hover{
 
 
 /* Tablet viewpoint*/
+@media screen and (max-width:1400px) {
+    header{
+        background-color:rgb(223, 15, 15);
+        color: #efebeb;
+        padding: 18px;
+        text-align: center;
+        position: fixed;
+        width: 100%;
+        z-index: 1;
+        top: 0%;
+    }
+    .banner .Welcome{
+        color: rgb(223, 15, 15);
+        left: 0;
+        top: 20%;
+    }
+    
+    .banner .Welcome h1{
+      
+        font-size: 45px;
+    }
+    .banner .Welcome p{
+        margin-top: 0px;
+        width:80%;
+        font-size: 25px;
+    }
+        nav{
+            background-color: #f4f4ff;
+            padding: 20px;
+            position: sticky;
+            top: 0px;
+            width: 100%;
+        }  
+    nav li a{
+    text-decoration: none;
+    color: #f63232;
+    padding: 10px;
+    border-radius: 10px;
+}
+@media screen and (max-width:1300px) {
+    header{
+        background-color:rgb(223, 15, 15);
+        color: #efebeb;
+        padding: 18px;
+        text-align: center;
+        position: fixed;
+        width: 100%;
+        z-index: 1;
+        top: 0%;
+    }
+    .banner .Welcome{
+        color: rgb(223, 15, 15);
+        left: 0;
+        top: 20%;
+    }
+    
+    .banner .Welcome h1{
+    
+        font-size: 35px;
+    }
+    .banner .Welcome p{
+        margin-top: 0px;
+        width:80%;
+        font-size: 20px;
+    }
+
+}
 @media screen and (max-width:1000px) {
     header{
         background-color:rgb(223, 15, 15);
         color: #efebeb;
-        padding: 10px;
+        padding: 14px;
         text-align: center;
         position: absolute;
         width: 100%;
         z-index: 1;
         top: 0%;
     }
-
+    .banner .Welcome{
+        color: rgb(223, 15, 15);
+        left: 0;
+        top: 20%;
+    }
+    
+    .banner .Welcome h1{
+    
+        font-size: 35px;
+    }
+    .banner .Welcome p{
+        margin-top: 0px;
+        width:50%;
+        font-size: 20px;
+    }
+        
+}
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width:825px) {
     header{
         background-color:rgb(223, 15, 15);
         color: #efebeb;
-        padding: 5px;
+        padding: 14px;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        z-index: 1;
+        top: 0%;
+    }
+    .banner .Welcome{
+        color: rgb(223, 15, 15);
+        left: 0;
+        top: 20%;
+    }
+    
+    .banner .Welcome h1{
+        font-size: 25px;
+    }
+    .banner .Welcome p{
+        margin-top: 0px;
+        width:50%;
+        font-size: 15px;
+    }
+        nav{
+            background-color: #f4f4ff;
+            padding: 20px;
+            position: relative;
+            top: 0px;
+            width: 100%;
+        }  
+    nav li a{
+    text-decoration: none;
+    color: #f63232;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+    
+
+}
+@media screen and (max-width: 640px) {
+    header{
+        background-color:rgb(223, 15, 15);
+        color: #efebeb;
+        padding: 12px;
         text-align: center;
         position: absolute;
         width: 100%;
@@ -172,7 +297,7 @@ form input:invalid:hover{
         font-size: 10px;
         border: 4px solid white;
         display: inline-block;
-        border-radius: 35px ;
+        border-radius: 36px ;
     }
 
     .banner .Welcome{
